# fhir-data-generator

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  release_test.yml  test-suite.yml
examples/: observation_bmi_example.py  patient_example1.py  patient_example2.py  patient_example3.py  patient_example4.py  patient_example5.json  patient_example5.py
fhir_data_generator/: __init__.py
fhir_data_generator/iclaim/: claim.py  coverage.py  observation.py  patient.py
fhir_data_generator/imri/: care_plan.py  composition.py  condition.py  document_reference.py  encounter.py  imaging_study.py  location.py
fhir_data_generator/patient/: patient.py
fhir_data_generator/physical_activity/: care_plan.py  condition_e.py  goal.py  observation.py  organization_h.py  organization_s.py  patient_ex.py  patient_tw.py  practitioner.py  service_request.py
fhir_data_generator/simple_client/: http.py  keycloak_authorization_code.py  keycloak_client_credentials.py  keycloak_verify_token.py  simple_client.py
fhir_data_generator/tw_ltc/: adverse_event.py  location.py  medication_administration.py  observation.py  organization.py  patient.py  procedure.py  (+3 more)
tests/: test_create_patient_sc1.py  test_create_patient_sc2.py  test_create_patient_sc3.py  test_get_patient.py  test_patient.py  test_patient_sc1.py  test_patient_sc2.py  test_simple_client.py  test_update_patient_sc1.py  test_update_patient_sc2.py  test_update_patient_sc3.py
web/: .env.example  .gitignore  Pipfile  fhir-data-generator.service.example  main.py  obs_extracter.py
(+370 files in other folders)
