[tool.poetry]
name = "fhir-data-generator"
version = "1.2.1"
description = "The quick FHIR data generator for Python."
authors = ["Peter Li <peter279k@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/peter279k/fhir-data-generator"
keywords = [
    "FHIR",
    "Data"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "=2.32.3"
beautifulsoup4 = "=4.12.3"

[tool.poetry.dev-dependencies]
pytest = "=7.1.2"
pytest-cov = "=3.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
